# lona

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  ISSUES.md  Makefile  PLAN.md  README.md  build.rs  docker-compose.yml  mkdocs.yaml  mkdocs.yml  requirements.txt  rust-toolchain.toml
crates/lona-abi/: Cargo.toml  README.md
crates/lona-abi/src/: boot.rs  fault.rs  layout.rs  lib.rs  tcb.rs  types.rs
crates/lona-abi/src/ipc/: ipc_test.rs  mod.rs
crates/lona-abi/src/types/: addr.rs  addr_test.rs  cap.rs  cap_test.rs  id.rs  id_test.rs  mod.rs
crates/lona-core/: Cargo.toml
crates/lona-core/src/: allocator.rs  allocator_tests.rs  binary.rs  binary_tests.rs  chunk.rs  error_context.rs  fnv.rs  hamt.rs  integer.rs  lib.rs  list.rs  list_tests.rs  map.rs  meta.rs  opcode.rs  pvec.rs  ratio.rs  source.rs  span.rs  string.rs  symbol.rs  value.rs  vector.rs  vector_tests.rs
crates/lona-core/src/chunk/: disassemble.rs  mod.rs  tests.rs
crates/lona-core/src/hamt/: insert.rs  iter.rs  mod.rs  node.rs  remove.rs  tests.rs
crates/lona-core/src/integer/: mod.rs  ops.rs  tests.rs
crates/lona-core/src/map/: mod.rs  tests.rs  value_key.rs
crates/lona-core/src/opcode/: encoding.rs  mod.rs  tests.rs
crates/lona-core/src/pvec/: mod.rs  node.rs  tests.rs
crates/lona-core/src/ratio/: mod.rs  tests.rs
crates/lona-core/src/set/: mod.rs  tests.rs
crates/lona-core/src/value/: accessors.rs  conversions.rs  display.rs  function.rs  mod.rs  symbol_value.rs  tests.rs  var.rs
crates/lona-kernel/: Cargo.toml
crates/lona-kernel/src/: lib.rs
crates/lona-kernel/src/namespace/: loader.rs  mod.rs  registry.rs
crates/lona-kernel/src/vm/: collections.rs  error.rs  frame.rs  globals.rs  helpers.rs  interpreter.rs  introspection.rs  introspection_tests.rs  macro_expander.rs  mod.rs  natives.rs  numeric.rs  output.rs  pattern.rs  primitives.rs  tests.rs
crates/lona-memory-manager/: Cargo.toml  README.md  build.rs
crates/lona-memory-manager/src/: embedded.rs  event_loop.rs  lib.rs
crates/lona-memory-manager/src/elf/: elf_test.rs  mod.rs
crates/lona-memory-manager/src/event_loop/: sel4_impl.rs
crates/lona-memory-manager/src/platform/: mmio.rs  mod.rs
crates/lona-memory-manager/src/realm/: boot_module.rs  constants.rs  frame_mapping.rs  init.rs  kernel_objects.rs  mod.rs  tcb.rs  types.rs
crates/lona-memory-manager/src/slots/: mod.rs  slots_test.rs
crates/lona-memory-manager/src/uart/: aarch64.rs  mod.rs  x86_64.rs
crates/lona-memory-manager/src/untyped/: mod.rs  untyped_test.rs
crates/lona-runtime/: Cargo.toml  build.rs
crates/lona-runtime/src/: integration_tests.rs  interactive.rs  main.rs  repl.rs
crates/lona-runtime/src/integration_tests/: arithmetic.rs  errors.rs  macros.rs  mod.rs  repl_state.rs  special_forms.rs
crates/lona-runtime/src/memory/: mod.rs  provider.rs  slots.rs  untyped.rs
crates/lona-runtime/src/platform/: fdt.rs  mod.rs  uart.rs
crates/lona-spec-tests/: Cargo.toml
crates/lona-spec-tests/src/: builtins.rs  context.rs  data_types.rs  evaluation.rs  functions.rs  lib.rs  literals.rs  macros.rs  operators.rs  reader_macros.rs  special_forms.rs  tco.rs
crates/lona-spec-tests/src/builtins/: atoms.rs  binary.rs  collections.rs  io.rs  metadata.rs  mod.rs  regex.rs  sorted_collections.rs  symbols.rs  type_predicates.rs
crates/lona-spec-tests/src/data_types/: binary.rs  collections.rs  error_tuples.rs  function.rs  keyword.rs  metadata.rs  mod.rs  primitives.rs  semantics.rs  set.rs  strings.rs  symbols.rs
crates/lona-spec-tests/src/functions/: destructuring.rs  mod.rs  multi_arity.rs
crates/lona-spec-tests/src/operators/: addition.rs  bitwise.rs  coercion.rs  comparison.rs  division.rs  first_class.rs  mod.rs  modulo.rs  multiplication.rs  subtraction.rs
crates/lona-spec-tests/src/special_forms/: case_tests.rs  let_tests.rs  mod.rs  ns_tests.rs  planned.rs
crates/lona-test/: Cargo.toml
crates/lona-test/src/: lib.rs
crates/lona-vm/: Cargo.toml  README.md  build.rs  lona-vm.ld
crates/lona-vm/src/: lib.rs  lib_test.rs
crates/lona-vm/src/bytecode/: bytecode_test.rs  mod.rs
crates/lona-vm/src/compiler/: call.rs  collection.rs  compiler_test.rs  disassemble.rs  fn_compile.rs  match_compile.rs  match_test.rs  mod.rs  pattern.rs  pattern_test.rs  receive_compile.rs  receive_test.rs
crates/lona-vm/src/e2e/: mod.rs  runner.rs  spec_runner.rs  tests.rs  tests_basic.rs  tests_lmm.rs  tests_lmm_demand.rs  tests_process.rs
crates/lona-vm/src/gc/: alloc.rs  copy.rs  copy_test.rs  growth.rs  growth_test.rs  major.rs  major_test.rs  minor.rs  minor_test.rs  mod.rs  mso.rs  mso_test.rs  roots.rs  roots_test.rs  utils.rs  utils_test.rs
crates/lona-vm/src/heap/: heap_test.rs
crates/lona-vm/src/intrinsics/: arithmetic.rs  arithmetic_test.rs  boolean_test.rs  collection.rs  cost_test.rs  intrinsics_test.rs  keyword_intrinsic_test.rs  lookup_test.rs  meta.rs  meta_intrinsics_test.rs  mod.rs  predicate_test.rs  sequence.rs  sequence_test.rs  string.rs  string_test.rs  tuple_intrinsic_test.rs
crates/lona-vm/src/loader/: loader_test.rs  (+1 more)
crates/lonala-compiler/: Cargo.toml
crates/lonala-compiler/src/: chunk.rs  compiler.rs  error.rs  lib.rs  opcode.rs
crates/lonala-human/: Cargo.toml
crates/lonala-human/src/: compiler_errors.rs  diagnostic.rs  docs.rs  format.rs  lib.rs  line_index.rs  namespace_errors.rs  parser_errors.rs  vm_errors.rs
crates/lonala-human/tests/: integration.rs  suggestions.rs
crates/lonala-lsp/: Cargo.toml
crates/lonala-lsp/src/: document.rs  lib.rs  main.rs  semantic_tokens.rs  server.rs
crates/lonala-lsp/tests/: semantic_tokens.rs
crates/lonala-parser/: Cargo.toml
crates/lonala-parser/src/: ast.rs  ast_tests.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
tools/pygments-lonala/: pyproject.toml
tools/pygments-lonala/lonala_lexer/: __init__.py  lexer.py
tools/pygments-lonala/pygments_lonala.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/zed-plugin/: .gitignore  Cargo.toml  README.md  extension.toml
tools/zed-plugin/src/: lib.rs
(+494 files in other folders)
