# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Lona workspace root

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tobias Sarnowski <tobias@sarnowski.cloud>"]
repository = "https://github.com/sarnowski/lona"

[workspace.lints.rust]
# Deny all warnings - build fails if any warning occurs
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# =============================================================================
# Lint Groups (from most to least strict)
# =============================================================================

# Correctness - definitely wrong code
correctness = { level = "deny", priority = -1 }

# Suspicious - probably wrong code
suspicious = { level = "deny", priority = -1 }

# Complexity - overly complex code
complexity = { level = "deny", priority = -1 }

# Performance - inefficient code
perf = { level = "deny", priority = -1 }

# Style - non-idiomatic code
style = { level = "deny", priority = -1 }

# Pedantic - opinionated lints
pedantic = { level = "deny", priority = -1 }

# Nursery - experimental lints (may have false positives)
nursery = { level = "deny", priority = -1 }

# Cargo - Cargo.toml issues
cargo = { level = "deny", priority = -1 }

# Restriction - lints that restrict certain patterns (opt-in)
restriction = { level = "deny", priority = -1 }

# =============================================================================
# Explicitly Allowed Lints (with justification)
# =============================================================================

# no_std context - these don't apply
missing_errors_doc = "allow"      # No std::error::Error in no_std
missing_panics_doc = "allow"      # Panics are fatal in kernel, documented differently
std_instead_of_core = "allow"     # We use core, this would flag dependencies
std_instead_of_alloc = "allow"    # We use alloc, this would flag dependencies

# Conflicts with other lints or style choices
blanket_clippy_restriction_lints = "allow"  # We intentionally enable restriction group
implicit_return = "allow"         # Conflicts with Rust idioms, explicit return is noise
needless_borrowed_reference = "allow"  # Conflicts with pattern_type_mismatch - we prefer explicit &Ok(ref x)
question_mark_used = "allow"      # ? operator is idiomatic Rust
semicolon_outside_block = "allow" # Conflicts with rustfmt - defer to formatter
separated_literal_suffix = "allow" # 123_i32 vs 123i32 - we prefer no separator
single_call_fn = "allow"          # Extracting single-call functions aids readability
ref_patterns = "allow"            # ref in patterns can be clearer sometimes
pub_with_shorthand = "allow"      # pub(super) vs pub(in super) - shorthand is fine
self_named_module_files = "allow" # mod.rs vs foo.rs style - we use mod.rs
mod_module_files = "allow"        # Allow mod.rs files (same as above, different lint)

# Too restrictive for practical code
absolute_paths = "allow"          # Using crate::foo is clearer than many imports
missing_trait_methods = "allow"   # Default trait method impls in stdlib are correct
arbitrary_source_item_ordering = "allow"  # Logical ordering often better than alphabetical
integer_division = "allow"        # Integer division is intentional for size calculations
integer_division_remainder_used = "allow"  # Same as above
missing_docs_in_private_items = "allow"  # Only require docs on public items
needless_collect = "allow"        # Sometimes we want to materialize for testing
pub_use = "allow"                 # Re-exports are common and useful
shadow_unrelated = "allow"        # Shadowing is sometimes cleaner than renaming
unseparated_literal_suffix = "allow"  # 1usize is fine, no underscore needed

# Internal project - not published to crates.io
cargo_common_metadata = "allow"   # repository/readme/keywords/categories not needed

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
panic = "abort"     # No unwinding in kernel
