[workspace]
resolver = "3"
members = [
    "crates/lona-abi",
    "crates/lona-memory-manager",
    "crates/lona-vm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Tobias Sarnowski"]
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/sarnowski/lona"

[profile.release]
opt-level = "z"  # Optimize for size on embedded
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"

# Operating system needs this all the time
unsafe_code = "allow"

[workspace.lints.clippy]
# All lint groups as deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Extra strict denies
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Intentional allows
cast_possible_truncation = "allow"  # 64-bit only target (seL4)
