# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Lona core types and traits

[package]
name = "lona-core"
description = "Foundational types and traits for the Lona runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = []

[lints]
workspace = true
