# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Kernel abstractions for the Lona runtime

[package]
name = "lona-kernel"
description = "Kernel abstractions for the Lona runtime (VM, scheduler, processes)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = ["lona-core/alloc", "lonala-compiler/alloc", "lonala-parser/alloc"]

[dependencies]
lona-core = { path = "../lona-core", default-features = false }
lonala-compiler = { path = "../lonala-compiler", default-features = false }
lonala-parser = { path = "../lonala-parser", default-features = false }

[lints]
workspace = true
