# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Lona runtime root task for seL4

[package]
name = "lona-runtime"
description = "Lona runtime - the root task for Lona on seL4"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
integration-test = ["dep:lona-test"]

[dependencies]
# seL4 Rust bindings from the official repository
sel4 = { git = "https://github.com/seL4/rust-sel4", branch = "main" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4", branch = "main" }

# Device tree parsing for hardware discovery
fdt = "0.1"

# Lona crates
lona-core = { path = "../lona-core" }
lona-kernel = { path = "../lona-kernel" }
lona-test = { path = "../lona-test", optional = true }
lonala-compiler = { path = "../lonala-compiler" }

[lints]
workspace = true
