# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Integration test utilities for Lona

[package]
name = "lona-test"
description = "Integration test utilities for Lona (test harness, markers, assertions)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
# No dependencies - this crate provides primitives only

[lints]
workspace = true
