# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025 Tobias Sarnowski <tobias@sarnowski.cloud>
#
# Cargo.toml - Lexer and parser for the Lonala language

[package]
name = "lonala-parser"
description = "Lexer and parser for the Lonala language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
lona-core = { path = "../lona-core", default-features = false }

[lints]
workspace = true
